feat(config): :wrench: update config to publish package
add publish secret

Ref: #3

--- a/.github/workflows/util-package-deploy.yml
+++ b/.github/workflows/util-package-deploy.yml
@@ -13,7 +13,7 @@ on:
     secrets:
       PAT:
         required: true
-      WRAPPID_PUBLISH_TOKEN
+      WRAPPID_PUBLISH_TOKEN:
         required: true
 ## Below secrets are required if EMAIL_NOTIFY is TRUE
       EMAIL_SERVER_ADDRESS:
