--- a/.github/workflows/send-email-publish.yml
+++ b/.github/workflows/send-email-publish.yml
@@ -63,7 +63,7 @@ jobs:
               <p>Hi Wrappiders 🕵🏽‍♂️,</p>
 
               <p>
-                We have released a new package version of our ${{ github.event.repository.name }} project, ${{ steps.current-tag.outputs.tag }}. 🚀<br>
+                We have released a new package version of our ${{ github.event.repository.name }} project, ${{ inputs.tag-version }}. 🚀<br>
                 <br>
                 This version comes with some amazing new features and improvements that will make your experience even better.
                 You can check out the latest release details here https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/tag/${{ inputs.tag-version }}.
