--- a/.github/workflows/util-create-package-release.yml
+++ b/.github/workflows/util-create-package-release.yml
@@ -77,14 +77,14 @@ jobs:
       - name: Check if release exists
         id: check_release
         run: |
-          TAG_NAME=${{ steps.tag.outputs.tag }}
-          gh release view ${{ steps.tag.outputs.tag }} &>/dev/null
-          if [[ $? -eq 0 ]]; then
-            echo "::set-output name=release_exists::true"
-          else
+          RELEASE_EXISTS=$(gh release view ${{ steps.tag.outputs.tag }} || echo "")
+          gh release view ${{ steps.tag.outputs.tag }} # &>/dev/null
+          if [ -z "$RELEASE_EXISTS" ]; then
             echo "::set-output name=release_exists::false"
+          else
+            echo "::set-output name=release_exists::true"
           fi
-      
+
       - name: Print release status
         run: |
           if [[ "${{ steps.check_release.outputs.release_exists }}" == "false" ]]; then
