feat(config): :wrench: change release check logic
check if release exists

ref: #5

--- a/.github/workflows/util-create-package-release.yml
+++ b/.github/workflows/util-create-package-release.yml
@@ -84,7 +84,8 @@ jobs:
           else
             echo "::set-output name=release_exists::true"
           fi
-
+        env:
+          GH_TOKEN: ${{ secrets.PAT }}
       - name: Print release status
         run: |
           if [[ "${{ steps.check_release.outputs.release_exists }}" == "false" ]]; then
