--- a/.github/workflows/util-create-package-release.yml
+++ b/.github/workflows/util-create-package-release.yml
@@ -33,15 +33,16 @@ on:
 name: Create Package Release - CD
 
 jobs:
-  create-release:
-    name: Create Release
+
+  check-pre-requisites:
+    name: Check Pre-requisites
     runs-on: ubuntu-latest
     permissions: write-all
     outputs:
-     tag-version: ${{ steps.tag.outputs.tag }}
-     release-exist: ${{ steps.check_release.outputs.release_exists }}
+      tag-version: ${{ steps.tag.outputs.tag }}
+      release-exist: ${{ steps.check_release.outputs.release_exists }}
+
     steps:
-  
       - name: Check if tag is provided
         id: check_tag
         run: echo ::set-output name=tag_exists::$(if [ -n "${{ github.event.inputs.tag-name }}" ]; then echo "true"; else echo "false"; fi)
@@ -96,15 +97,19 @@ jobs:
             echo "Release does not exist for tag ${{ steps.tag.outputs.tag }}."
           fi
 
+  create-release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    permissions: write-all
+    steps:
+  
       - name: 🛒 Checkout Repository
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         uses: actions/checkout@v4
         with:
-          ref: ${{ steps.tag.outputs.tag }}
+          ref: ${{ needs.create-release.outputs.tag-version }}
           token: ${{ secrets.PAT }}
-       
+
       - name: 🛠 Set up Node.js
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         uses: actions/setup-node@v4
         with:
           node-version: 16
@@ -114,61 +119,45 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.WRAPPID_REGISTRY_TOKEN }} 
           
       - name: 🛠 Setup gh and git
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         run: |
           echo ${{secrets.PAT}} | gh auth login --with-token
           git config user.name "${{ secrets.GHUSER_NAME }}"
           git config user.email "${{ secrets.GHUSER_EMAIL }}"
 
-
-## TODO
-# gh release view v0.0.409 --json name,tagName,createdAt,publishedAt --jq .name
-# if release name not specified, takes latest
-
       - name: Extract version
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         id: extract-version
         uses: Saionaro/extract-package-version@v1.0.6
 
       - name: ⬇️ Setup Project
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         run: | 
          echo Installing Node Modules
          npm ci --omit-dev
 
       - name: Print version
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         run: echo ${{ steps.extract-version.outputs.version }}
 
       - name: 🏗️ Build wrappid ${{ github.event.repository.name }}
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         run: npm run build
 
       - name: 📦 Create Package
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         run: npm pack ./dist/
 
       - name: Find packaged name
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         id: find-packaged-name
         run: |
           packaged_name=$(find . -name "*.tgz" | xargs -I{} basename {})
           echo "::set-output name=packaged-name::$packaged_name"
 
       - name: Print file name of packaged artifact
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         run: echo ${{ steps.find-packaged-name.outputs.packaged-name }}
 
       - name: List files
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         run: ls -l
 
       - name: Generate Release notes
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         run: curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/util-scripts/release_notes.sh | bash -s ${{ github.repository_owner }} ${{ github.event.repository.name }}
 
       - name: Create Release
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -181,7 +170,6 @@ jobs:
           prerelease: false
 
       - name: Upload Release Asset Package
-        if: ${{ steps.check_release.outputs.release_exists }} == "no"
         id: upload-package-release-asset 
         uses: actions/upload-release-asset@v1
         env:
@@ -194,11 +182,11 @@ jobs:
 
   call-send-email-released:
       needs: create-release
-      if: ${{ needs.create-release.outputs.release-exist }} == "no"
+      if: ${{ needs.check-pre-requisites.outputs.release-exist }} == "no"
       permissions: write-all
       uses: wrappid/workflows/.github/workflows/send-email-released.yml@main
       with:
-        tag-version: ${{ needs.create-release.outputs.tag-version }}
+        tag-version: ${{ needs.check-pre-requisites.outputs.tag-version }}
         EMAIL_SENDER_NAME: ${{ inputs.EMAIL_SENDER_NAME }}
       secrets:
         EMAIL_SERVER_ADDRESS: ${{ secrets.EMAIL_SERVER_ADDRESS }}
