feat(config): :wrench: add pre-requisites job
check pre-requisites

ref: #5

--- a/.github/workflows/util-create-package-release.yml
+++ b/.github/workflows/util-create-package-release.yml
@@ -100,7 +100,7 @@ jobs:
   create-release:
     needs: check-pre-requisites
     name: Create Release
-    if: ${{ needs.check-pre-requisites.outputs.release-exist }} == 'no'
+    if: needs.check-pre-requisites.outputs.release-exist == 'no'
     runs-on: ubuntu-latest
     permissions: write-all
     steps:
