--- a/.github/workflows/send-email-deploy.yml
+++ b/.github/workflows/send-email-deploy.yml
@@ -65,7 +65,7 @@ jobs:
               <p>Hi Testers 🕵🏽‍♂️,</p>
 
               <p>Its time to hunt those bugs again 🐛<br>
-                We have deployed a new version of our ${{ github.event.repository.name }} project, ${{ steps.current-tag.outputs.tag }}. 🚀<br>
+                We have deployed a new version of our ${{ github.event.repository.name }} project, ${{ inputs.tag-version }}. 🚀<br>
                 Start your hunt ${{ inputs.PROJECT_HOSTED_URL }}<br>
                 This version comes with some amazing new features and improvements that will make your experience even better.
                 You can check out the latest release details here https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/tag/${{ inputs.tag-version }}.
