--- a/.github/workflows/util-create-app-release.yml
+++ b/.github/workflows/util-create-app-release.yml
@@ -90,21 +90,20 @@ jobs:
           GH_TOKEN: ${{ secrets.PAT }}
 
 # TODO 1: DIFFERENT JOB TO CREATE BUILD AND BUILD ARTIFACT.
-# TODO 2: EACH BUILD PARALLEL JOB
+# TODO 2: EACH BUILD PARALLEL JOB --> DONE
 # TODO 3: OPTION TO SKIP PARTICULAR BUILD
 
-  create-release:
+  build-android:
     needs: check-pre-requisites
-    name: Create Release
+    name: Build Android
     if: needs.check-pre-requisites.outputs.release-exist == 'no'
     runs-on: ubuntu-latest
-    permissions: write-all
     steps:
 
       - name: 🛒 Checkout Tag
         uses: actions/checkout@v4
         with:
-          ref: ${{ needs.create-release.outputs.tag-version }}
+          ref: ${{ needs.check-pre-requisites.outputs.tag-version }}
           token: ${{ secrets.PAT }}
 
       - name: 🛠 Set up Node.js
@@ -115,7 +114,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/wrappid
         env:
           NODE_AUTH_TOKEN: ${{secrets.WRAPPID_REGISTRY_TOKEN }} 
-          
+
       - name: 🛠 Setup gh and git
         run: |
           echo ${{secrets.PAT}} | gh auth login --with-token
@@ -132,7 +131,7 @@ jobs:
          echo Installing Node Modules
          npm ci --omit-dev
 
-      - name: Setup Wrappid
+      - name: Setup Wrappid Toolkit
         run: npm install -g @wrappid/toolkit@${{ inputs.TOOLKIT_VERSION }}
 
       - name: Check Wrappid Version
@@ -161,57 +160,153 @@ jobs:
           echo Starting Build.........................
           wrappid build android
 
-      - name: Wrappid Setup Web
-        run: |
-          gh auth status
-          echo Starting Build.........................
-          wrappid setup web --env=stage
-
-      - name: Build wrappid web
-        run: |
-          gh auth status
-          echo Starting Build.........................
-          wrappid build web
-
-      - name: Extract version
-        id: extract_version
-        uses: Saionaro/extract-package-version@v1.0.6
-
       - name: Print version
-        run: echo ${{ steps.extract_version.outputs.version }}
-
-      - name: Install zip
-        run: sudo apt install zip -y
-
-      - name: Zip build
-        run: |
-          cd build/web
-          zip -r web-v${{ steps.extract_version.outputs.version }}.zip *
+        run: echo ${{ needs.check-pre-requisites.outputs.tag-version }}
 
       - run: ls -l
 
-      - name: Move Web zip to root
-        run: mv build/web/web-v${{ steps.extract_version.outputs.version }}.zip web-v${{ steps.extract_version.outputs.version }}.zip
-
       - name: Move apk to root
-        run: mv build/mobile/android/app-debug.apk android-v${{ steps.extract_version.outputs.version }}.apk
+        run: mv build/mobile/android/app-debug.apk android-${{ needs.check-pre-requisites.outputs.tag-version }}.apk
 
       - run: ls -l
 
       - name: Get wrappid logs
-        run: cp $(npm root -g)/@wrappid/logs/logs.log wrappid-logs-v${{ steps.extract_version.outputs.version }}.log
+        run: cp $(npm root -g)/@wrappid/logs/logs.log android-wrappid-logs-${{ needs.check-pre-requisites.outputs.tag-version }}.log
+
+      - name: Upload Android Artifact
+        uses: actions/upload-artifact@v4
+        with:
+            name: android-${{ needs.check-pre-requisites.outputs.tag-version }}
+            path: |
+              android-${{ needs.check-pre-requisites.outputs.tag-version }}.apk
+              android-wrappid-logs-${{ needs.check-pre-requisites.outputs.tag-version }}.log
+
+  build-web:
+    needs: check-pre-requisites
+    name: Build Web
+    if: needs.check-pre-requisites.outputs.release-exist == 'no'
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Print Tag Version
+        run: echo ${{ needs.check-pre-requisites.outputs.tag-version }}
+
+      - name: 🛒 Checkout Tag
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.check-pre-requisites.outputs.tag-version }}
+          token: ${{ secrets.PAT }}
+
+      - name: 🛠 Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 16
+          cache: 'npm'
+          registry-url: https://npm.pkg.github.com/wrappid
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.WRAPPID_REGISTRY_TOKEN }} 
+
+      - name: 🛠 Setup gh and git
+        run: |
+          echo ${{secrets.PAT}} | gh auth login --with-token
+          git config user.name "${{ inputs.GIT_USER_NAME}}"
+          git config user.email "${{ secrets.GIT_USER_EMAIL }}"
+
+      - name: Setup Wrappid npm registry
+        run: |
+          npm config set @wrappid:registry https://npm.pkg.github.com/wrappid
+          npm config set //npm.pkg.github.com/:_authToken ${{ secrets.WRAPPID_REGISTRY_TOKEN }}
+
+      - name: ⬇️ Setup Project
+        run: | 
+         echo Installing Node Modules
+         npm ci --omit-dev
+
+      - name: Setup Wrappid Toolkit
+        run: npm install -g @wrappid/toolkit@${{ inputs.TOOLKIT_VERSION }}
+
+      - name: Check Wrappid Version
+        run: wrappid --version
+
+      - name: Wrappid setup web
+        run: |
+          gh auth status
+          echo Starting Setup.........................
+          wrappid setup web --env=stage
+
+      - name: Build Wrappid Web
+        run: |
+          gh auth status
+          echo Starting Build.........................
+          wrappid build Web
+
+      - name: Zip build
+        run: |
+          sudo apt install zip -y
+          cd build/web
+          zip -r web-${{ needs.check-pre-requisites.outputs.tag-version }}.zip *
+
+      - run: ls -l
+
+      - name: Move Web zip to root
+        run: mv build/web/web-${{ needs.check-pre-requisites.outputs.tag-version }}.zip web-${{ needs.check-pre-requisites.outputs.tag-version }}.zip
+
+      - name: Get wrappid logs
+        run: cp $(npm root -g)/@wrappid/logs/logs.log web-wrappid-logs-${{ needs.check-pre-requisites.outputs.tag-version }}.log
+
+      - run: ls -l
+
+      - name: Upload Android Artifact
+        uses: actions/upload-artifact@v4
+        with:
+            name: web-${{ needs.check-pre-requisites.outputs.tag-version }}
+            path: |
+              web-${{ needs.check-pre-requisites.outputs.tag-version }}.zip
+              web-wrappid-logs-${{ needs.check-pre-requisites.outputs.tag-version }}.log
+
+  create-release:
+    needs: check-pre-requisites
+    name: Create Release
+    if: needs.check-pre-requisites.outputs.release-exist == 'no'
+    runs-on: ubuntu-latest
+    permissions: write-all
+    steps:
+
+      - name: 🛒 Checkout Tag
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.check-pre-requisites.outputs.tag-version }}
+          token: ${{ secrets.PAT }}
+
+      - name: 🛠 Setup gh and git
+        run: |
+          echo ${{secrets.PAT}} | gh auth login --with-token
+          git config user.name "${{ inputs.GIT_USER_NAME}}"
+          git config user.email "${{ secrets.GIT_USER_EMAIL }}"
 
       - name: Generate Release notes
         run: curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/util-scripts/release_notes.sh | bash -s ${{ github.repository_owner }} ${{ github.event.repository.name }}
 
+
+      - name: Download Android Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: android-${{ needs.check-pre-requisites.outputs.tag-version }}
+
+      - name: Download Web Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: web-${{ needs.check-pre-requisites.outputs.tag-version }}
+
+      - run: ls -al
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT}} # Personal Access Token
         with:
-          tag_name: v${{ steps.extract_version.outputs.version }}
-          release_name: v${{ steps.extract_version.outputs.version }}
+          tag_name: ${{ needs.check-pre-requisites.outputs.tag-version }}
+          release_name: ${{ needs.check-pre-requisites.outputs.tag-version }}
           body_path: ./RELEASE_NOTES.md
           draft: false
           prerelease: false
@@ -223,8 +318,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT}} # Personal Access Token
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./web-v${{ steps.extract_version.outputs.version }}.zip
-          asset_name: "web-v${{ steps.extract_version.outputs.version }}.zip"
+          asset_path: ./web-${{ needs.check-pre-requisites.outputs.tag-version }}.zip
+          asset_name: "web-${{ needs.check-pre-requisites.outputs.tag-version }}.zip"
           asset_content_type: application/zip
 
       - name: Upload Release Asset Android
@@ -234,19 +329,30 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./android-v${{ steps.extract_version.outputs.version }}.apk
-          asset_name: "android-v${{ steps.extract_version.outputs.version }}.apk"
+          asset_path: ./android-${{ needs.check-pre-requisites.outputs.tag-version }}.apk
+          asset_name: "android-${{ needs.check-pre-requisites.outputs.tag-version }}.apk"
           asset_content_type: application/vnd.android.package-archive
 
-      - name: Upload Release Asset Wrappid-Logs
-        id: upload-log-release-asset 
+      - name: Upload Release Asset Web Wrappid-Logs
+        id: upload-web-log-release-asset 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./wrappid-logs-v${{ steps.extract_version.outputs.version }}.log
-          asset_name: "wrappid-logs-v${{ steps.extract_version.outputs.version }}.log"
+          asset_path: ./web-wrappid-logs-${{ needs.check-pre-requisites.outputs.tag-version }}.log
+          asset_name: "web-wrappid-logs-${{ needs.check-pre-requisites.outputs.tag-version }}.log"
+          asset_content_type: text/plain
+
+      - name: Upload Release Asset Android Wrappid-Logs
+        id: upload-android-log-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./android-wrappid-logs-${{ needs.check-pre-requisites.outputs.tag-version }}.log
+          asset_name: "android-wrappid-logs-${{ needs.check-pre-requisites.outputs.tag-version }}.log"
           asset_content_type: text/plain
 
   call-send-email-released:
@@ -255,7 +361,7 @@ jobs:
       permissions: write-all
       uses: wrappid/workflows/.github/workflows/send-email-released.yml@main
       with:
-        tag-version: ${{ needs.create-release.outputs.tag-version }}
+        tag-version: ${{ needs.check-pre-requisites.outputs.tag-version }}
         EMAIL_SENDER_NAME: ${{ inputs.EMAIL_SENDER_NAME }}
       secrets:
         EMAIL_SERVER_ADDRESS: ${{ secrets.EMAIL_SERVER_ADDRESS }}
