feat(config): :zap: error notifying
implemented for tag creation, release and deploy.

Ref: #4

--- a/.github/workflows/util-create-package-release.yml
+++ b/.github/workflows/util-create-package-release.yml
@@ -192,3 +192,21 @@ jobs:
         EMAIL_TO: ${{ secrets.EMAIL_TO }}
         EMAIL_CC: ${{ secrets.EMAIL_CC }}       ## Optional
         EMAIL_BCC: ${{ secrets.EMAIL_BCC }}     ## Optional
+
+
+  call-send-email-failure:
+      needs: [ check-pre-requisites, create-release ]
+      if: always() && needs.create-release.result == 'failure'
+      permissions: write-all
+      uses: wrappid/workflows/.github/workflows/send-email-failure.yml@main
+      with:
+        tag-version: ${{ needs.check-pre-requisites.outputs.tag-version }}
+        EMAIL_SENDER_NAME: ${{ inputs.EMAIL_SENDER_NAME }}
+      secrets:
+        EMAIL_SERVER_ADDRESS: ${{ secrets.EMAIL_SERVER_ADDRESS }}
+        EMAIL_SERVER_PORT: ${{ secrets.EMAIL_SERVER_PORT }}
+        EMAIL_USER_ID: ${{ secrets.EMAIL_USER_ID }}
+        EMAIL_USER_PASSWORD: ${{ secrets.EMAIL_USER_PASSWORD }}
+        EMAIL_TO: ${{ secrets.EMAIL_TO }}
+        EMAIL_CC: ${{ secrets.EMAIL_CC }}       ## Optional
+        EMAIL_BCC: ${{ secrets.EMAIL_BCC }}     ## Optional
