--- a/.github/workflows/util-app-deploy.yml
+++ b/.github/workflows/util-app-deploy.yml
@@ -80,3 +80,20 @@ jobs:
         tag-version: ${{ needs.app-deploy.outputs.tag-version }}
         EMAIL_SENDER_NAME: ${{ inputs.EMAIL_SENDER_NAME }}
         PROJECT_HOSTED_URL: ${{ inputs.PROJECT_HOSTED_URL }}
+
+  call-send-email-failure:
+      needs: app-deploy
+      if: always() && inputs.EMAIL_NOTIFY == 'true' && needs.app-deploy.result == 'failure'
+      permissions: write-all
+      uses: wrappid/workflows/.github/workflows/send-email-failure.yml@main
+      with:
+        tag-version: ${{ needs.check-pre-requisites.outputs.tag-version }}
+        EMAIL_SENDER_NAME: ${{ inputs.EMAIL_SENDER_NAME }}
+      secrets:
+        EMAIL_SERVER_ADDRESS: ${{ secrets.EMAIL_SERVER_ADDRESS }}
+        EMAIL_SERVER_PORT: ${{ secrets.EMAIL_SERVER_PORT }}
+        EMAIL_USER_ID: ${{ secrets.EMAIL_USER_ID }}
+        EMAIL_USER_PASSWORD: ${{ secrets.EMAIL_USER_PASSWORD }}
+        EMAIL_TO: ${{ secrets.EMAIL_TO }}
+        EMAIL_CC: ${{ secrets.EMAIL_CC }}       ## Optional
+        EMAIL_BCC: ${{ secrets.EMAIL_BCC }}     ## Optional
