--- a/.github/workflows/util-create-tag.yml
+++ b/.github/workflows/util-create-tag.yml
@@ -139,7 +139,7 @@ jobs:
         steps:
             - name: print
               run: echo ${{ needs.create-tag.outputs.tag-version }}
-  
+
     call-send-email-tag-created:
           needs: create-tag
           if: ${{ inputs.EMAIL_NOTIFY }} == true
@@ -156,6 +156,22 @@ jobs:
             EMAIL_TO: ${{ secrets.EMAIL_TO }}
             EMAIL_CC: ${{ secrets.EMAIL_CC }}       ## Optional
             EMAIL_BCC: ${{ secrets.EMAIL_BCC }}     ## Optional
-  
+
+    call-send-email-failure:
+        needs: [ create-tag ]
+        if: always() && needs.create-tag.result == 'failure'
+        permissions: write-all
+        uses: wrappid/workflows/.github/workflows/send-email-failure.yml@main
+        with:
+          tag-version: ${{ needs.create-tag.outputs.tag-version }}
+          EMAIL_SENDER_NAME: ${{ inputs.EMAIL_SENDER_NAME }}
+        secrets:
+          EMAIL_SERVER_ADDRESS: ${{ secrets.EMAIL_SERVER_ADDRESS }}
+          EMAIL_SERVER_PORT: ${{ secrets.EMAIL_SERVER_PORT }}
+          EMAIL_USER_ID: ${{ secrets.EMAIL_USER_ID }}
+          EMAIL_USER_PASSWORD: ${{ secrets.EMAIL_USER_PASSWORD }}
+          EMAIL_TO: ${{ secrets.EMAIL_TO }}
+          EMAIL_CC: ${{ secrets.EMAIL_CC }}       ## Optional
+          EMAIL_BCC: ${{ secrets.EMAIL_BCC }}     ## Optional
       
   
