ci(config): :sparkles: add sleep
add 10 seconds sleep before verification

Ref: #13

--- a/.github/workflows/util-app-deploy.yml
+++ b/.github/workflows/util-app-deploy.yml
@@ -67,6 +67,7 @@ jobs:
       
       - name: Verify Deployment
         run: |
+          sleep 10
           URL="${{ inputs.PROJECT_HOSTED_URL }}"
           response_code=$(curl -s -o /dev/null -w "%{http_code}" "$URL")
 
