fix(config): :green_heart: build hotfix
fix wrappid build web typo

ref: no issue

--- a/.github/workflows/util-create-app-release.yml
+++ b/.github/workflows/util-create-app-release.yml
@@ -238,7 +238,7 @@ jobs:
         run: |
           gh auth status
           echo Starting Build.........................
-          wrappid build Web
+          wrappid build web
 
       - name: Zip build
         run: |
