ci(config): :wrench: update config to create tag for wrappid templates
config to check if creating tag for template

Ref: #15

--- a/.github/workflows/util-create-tag.yml
+++ b/.github/workflows/util-create-tag.yml
@@ -118,7 +118,7 @@ jobs:
 
         - name: Find relative repository URL
           id: repo_url
-          run: echo "repository_url=$(${{ github.repository }})" >> "$GITHUB_OUTPUT"
+          run: echo "repository_url=${{ github.repository }}" >> "$GITHUB_OUTPUT"
 
         - name: Update template version
           if: steps.repo_url.outputs.repository_url == ('wrappid/wrappid-app' || 'wrappid/wrappid-service' || 'wrappid/wrappid-module')
